# pyRobBot

./: .flakeheaven.toml  .gitignore  LICENSE.md  README.md  packages.txt  poetry.toml  pyproject.toml
.github/workflows/: linting.yaml  tests.yaml
chat_gpt/: __init__.py  __main__.py  argparse_wrapper.py  chat.py  chat_context.py  chat_gpt.py  command_definitions.py  database.py  tokens.py
chat_gpt/app/: app  app.py  multipage.py  page_template.py
chat_gpt/app/pages/: template.py
gpt_buddy_bot/: __init__.py  __main__.py  argparse_wrapper.py  chat.py  chat_configs.py  chat_context.py  command_definitions.py  embeddings_database.py  general_utils.py  openai_utils.py  tokens.py
gpt_buddy_bot/app/: app.py  app_page_templates.py  multipage.py  page_template.py
gpt_buddy_bot/app/.streamlit/: config.toml
pyrobbot/: __init__.py  argparse_wrapper.py  chat.py  chat_configs.py  chat_context.py  command_definitions.py  embeddings_database.py  general_utils.py  internet_search.py  internet_utils.py  openai_utils.py  sst_and_tts.py  text_to_speech.py  tokens.py  voice_chat.py
pyrobbot/app/: __init__.py  app.py  app_page_templates.py  app_utils.py  multipage.py  streamlit_webrtc_test_app.py
pyrobbot/app/.streamlit/: config.toml
tests/: conftest.py
tests/smoke/: test_app.py  test_commands.py
tests/unit/: test_chat.py  test_internet_utils.py  test_text_to_speech.py  test_voice_chat.py
