[tool.poetry]
  authors = ["Paulo V C Medeiros <paulo.medeiros@smhi.se>"]
  description = "A simple UI & terminal ChatGPT chatbot that uses OpenAI API."
  license = "MIT"
  name = "gpt-buddy-bot"
  readme = "README.md"
  version = "0.1.0"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]

[tool.poetry.scripts]
  gbb = "gpt_buddy_bot.__main__:main"

[tool.poetry.dependencies]
  # Python version
  python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
  # Deps that should have been openapi deps
  matplotlib = "^3.8.0"
  plotly = "^5.18.0"
  scikit-learn = "^1.3.2"
  scipy = "^1.11.3"
  # Other dependencies
  numpy = "^1.26.1"
  openai = "^0.28.1"
  pandas = "^2.1.2"
  pillow = "^10.1.0"
  pydantic = "^2.4.2"
  streamlit = "^1.28.0"
  tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
  ipython = "^8.16.1"

[tool.poetry.group.linting.dependencies]
  black = "^23.10.1"
  flakeheaven = "^3.3.0"
  isort = "^5.12.0"
  pydoclint = "^0.3.8"
  ruff = "^0.1.3"

[tool.poetry.group.test.dependencies]
  pytest = "^7.4.3"
  pytest-cov = "^4.1.0"
  pytest-mock = "^3.12.0"
  python-lorem = "^1.3.0.post1"

  ##################
  # Linter configs #
  ##################
  pytest-order = "^1.1.0"

[tool.black]
  line-length = 90

[tool.isort]
  line_length = 90
  profile = "black"

  ##################
  # pytest configs #
  ##################

[tool.pytest.ini_options]
  addopts = "-v --failed-first --cov-report=term-missing --cov-report=term:skip-covered --cov-report=xml:.coverage.xml --cov=./"
  log_cli_level = "INFO"
  testpaths = ["tests/smoke", "tests/unit"]
